# check-cmake

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test-check-cmake.py
.github/workflows/: check-cmake.yaml
src/: __main__.py
src/check_cmake/: __init__.py  checks.py  colour.py  grid.py  lints.py  main.py  paths.py  utils.py  version.py
tests/error/externalproject/: CMakeLists.txt
tests/error/library_type/: CMakeLists.txt
tests/error/target_include_directories/: CMakeLists.txt
tests/error/target_include_directories_var/: CMakeLists.txt
tests/error/target_recommended/: CMakeLists.txt
tests/error/test_target_include_directories/: CMakeLists.txt
tests/error/threads/: CMakeLists.txt
tests/error/version/: CMakeLists.txt
tests/valid/externalproject/: CMakeLists.txt
tests/valid/library_type/: CMakeLists.txt
tests/valid/target_include_directories/: CMakeLists.txt
tests/valid/target_include_directories_var/: CMakeLists.txt
tests/valid/test_target_include_directories/: CMakeLists.txt
tests/valid/threads/: CMakeLists.txt
tests/valid/version/: CMakeLists.txt
tests/valid/version_no_check/: CMakeLists.txt
